<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Campus IR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_new_report">New Report</string>
    <string name="title_activity_my_reports">My Reports</string>
    <string name="new_report">N e w   R e p o r t</string>
    <string name="my_reports">M y   R e p o r t s</string>
    <string name="campus_ir">C a m p u s   I R</string>
    <string name="logout">Log Out</string>
    <string name="login">Log In</string>
    <string name="remember_me">Remember Me?</string>
    <string name="username">University ID</string>
    <string name="password">Password</string>
    <string name="enter_location">Building:</string>
    <string name="room_or_area">Room/Area:</string>
    <string name="issue_type">Issue Type:</string>
    <string name="description">More Information:</string>
    <string name="submit">Submit</string>
    <string name="take_pic">Take a Picture</string>
    <string name="clear_cache">Clear Reports Cache</string>
    <string name="asterisk">*</string>
    <string name="progress">Progress: </string>
    <string name="delete">Delete Report</string>
    <string name="add">Add Information</string>

    <string-array name="buildings_array">
        <item>[Select One]</item>
        <item>Bel Air Hall</item>
        <item>Cambridge Hall</item>
        <item>Centreville Hall</item>
        <item>Chestertown Hall</item>
        <item>Cumberland Hall</item>
        <item>Denton Hall</item>
        <item>Easton Hall</item>
        <item>Elkton Hall</item>
        <item>Oakland Hall</item>
        <item>Ellicott Hall</item>
        <item>Hagerstown Hall</item>
        <item>La Plata Hall</item>
        <item>Old Leonardtown</item>
        <item>New Leonardtown</item>
        <item>Anne Arundel Hall</item>
        <item>Caroline Hall</item>
        <item>Carroll Hall</item>
        <item>Dorchester Hall</item>
        <item>Prince Frederick Hall</item>
        <item>Queen Anne\'s Hall</item>
        <item>St. Mary\'s Hall</item>
        <item>Somerset Hall</item>
        <item>Wicomico Hall</item>
        <item>Worcester Hall</item>
        <item>Allegany Hall</item>
        <item>Baltimore Hall</item>
        <item>Calvert Hall</item>
        <item>Cecil Hall</item>
        <item>Charles Hall</item>
        <item>Frederick Hall</item>
        <item>Garrett Hall</item>
        <item>Harford Hall</item>
        <item>Howard Hall</item>
        <item>Kent Hall</item>
        <item>Montgomery Hall</item>
        <item>Prince George\'s Hall</item>
        <item>Talbot Hall</item>
        <item>Washington Hall</item>
        <item>South Campus Commons</item>
    </string-array>

    <string-array name="issue_array">
        <item>[Select One]</item>
        <item>Broken Window</item>
        <item>Broken A/C</item>
        <item>Broken Lock</item>
        <item>Water Not Working</item>
        <item>Outlet Broken</item>
        <item>WiFi Down</item>
        <item>Pipe Broken</item>
        <item>Leaking Ceiling</item>
        <item>Cracked Floor</item>
        <item>Paint Chipped</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_full_report">FullReport</string>

</resources>
