<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rzepka.hsiao.whipp.campusir.FullReport">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="405dp"
        android:id="@+id/scrollView2"
        android:layout_marginBottom="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/enter_location"
                android:id="@+id/header1"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/room_or_area"
                android:id="@+id/header2"
                android:layout_below="@+id/header1"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/header3"
                android:layout_below="@+id/progress"
                android:layout_alignParentStart="true"
                android:layout_margin="20dp"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:id="@+id/progress_bar"
                style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
                android:layout_below="@+id/header2" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/progress_bar"
                android:layout_centerHorizontal="true"
                android:text="@string/progress"
                android:id="@+id/progress"
                android:layout_marginEnd="5dp"
                android:textColor="@color/actionbar_background"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:id="@+id/report_image"
                android:contentDescription="@string/app_name"
                android:layout_below="@+id/header3"
                android:layout_centerHorizontal="true"
                android:background="@drawable/border"
                android:layout_marginTop="10dp"/>





        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/scrollView2"
        android:layout_centerHorizontal="true">

        <Button
            android:background="@drawable/styled_button"
            style="@style/button_text"
            android:textSize="17sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="#FFFFFF"
            android:id="@+id/delete_button"
            android:layout_marginEnd="20dp"/>

        <Button
            android:background="@drawable/styled_button"
            style="@style/button_text"
            android:textSize="17sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:id="@+id/add_button"
            />

    </LinearLayout>

</RelativeLayout>
