<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <com.rzepka.hsiao.whipp.campusir.TitleBar
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:id="@+id/view"
    />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:textSize="42sp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/campus_ir"
        android:textColor="#FFFFFF"
        android:id="@+id/title" />

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:id="@+id/textView"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/textView2"
        android:layout_below="@+id/id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:layout_below="@+id/remember_checkbox"
        android:layout_alignLeft="@+id/remember_checkbox"
        android:layout_alignStart="@+id/remember_checkbox"
        android:layout_alignRight="@+id/remember_checkbox"
        android:layout_alignEnd="@+id/remember_checkbox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:id="@+id/remember_checkbox"
        android:layout_marginTop="49dp"
        android:checked="false"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id"
        android:inputType="textWebEditText"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
